Fix Pills overflowing into multiple

--- a/app/src/components/Pill/style.module.scss
+++ b/app/src/components/Pill/style.module.scss
@@ -11,4 +11,5 @@
 	text-transform: uppercase;
 	line-height: 1;
 	width: fit-content;
+	white-space: nowrap;
 }
